<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/blob_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_header"
        android:src="@drawable/blob_top"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/top_decorative_wave" />

    <TextView
        android:id="@+id/titleCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create"
        android:textSize="54sp"
        android:textColor="@color/text_black"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/blob_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_your_account"
        android:textSize="16sp"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@id/titleCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_user"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg"
            android:inputType="textPersonName"
            android:textColorHighlight="#202020"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Email"
        app:startIconDrawable="@drawable/ic_mail"  app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg"
            android:inputType="textEmailAddress"
            android:textColorHighlight="#202020"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintEnd_toEndOf="@id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg"
            android:inputType="textPassword"
            android:textColorHighlight="#202020"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_account"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnCreate"
        app:layout_constraintEnd_toStartOf="@id/btnCreate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/purple_button"
        app:cornerRadius="32dp"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/create_account_button" />

    <ImageView
        android:id="@+id/blob_bottom"
        android:layout_width="90dp"
        android:layout_height="261dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/blob_bottom"
        android:contentDescription="@string/bottom_decorative_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_account"
        android:textSize="14sp"
        android:textColor="@color/text_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>